migrating from scala 10